--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -16,6 +16,7 @@
     "noImplicitAny": false,
     "strict": true,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "strictPropertyInitialization": false
   }
 }
