--- a/app/package.json
+++ b/app/package.json
@@ -12,11 +12,16 @@
     "directory": "app/"
   },
   "scripts": {
+    "build": "ng build",
+    "format": "prettier --config .prettierrc --write .",
+    "lint:fix": "eslint --fix",
+    "lint": "eslint",
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test:cov": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test": "ng test",
+    "watch": "ng build --watch --configuration development"
   },
   "dependencies": {
     "@angular/animations": "^18.0.1",
@@ -35,6 +40,11 @@
     "@angular-devkit/build-angular": "^18.0.2",
     "@angular/cli": "^18.0.2",
     "@angular/compiler-cli": "^18.0.1",
+    "@typescript-eslint/parser": "^7.5.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "eslint": "^8.57.0",
     "typescript": "~5.4.5"
   }
 }
